// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
  >
    <div
      class="container px-10 mx-auto"
    />
  </div>
</DocumentFragment>
`;

exports[`Section should render with border 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 gGdSDT hasBorder"
  >
    <div
      class="container px-10 mx-auto"
    />
  </div>
</DocumentFragment>
`;

exports[`Section should render with custom background color 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 dgHHTG"
  >
    <div
      class="container px-10 mx-auto"
    />
  </div>
</DocumentFragment>
`;
